fix wrapping of text on desktop

--- a/client/src/dashboard/styles/components/_dashboard-kpis.scss
+++ b/client/src/dashboard/styles/components/_dashboard-kpis.scss
@@ -103,7 +103,7 @@
 
       @media(min-width: $screen-md){
         margin-bottom: 22px;
-        height: 30px;
+        height: 50px;
       }
 
       &::before {
